# mlx_turboquant

./: LICENSE  README.md  pyproject.toml
benchmarks/: kv_memory.json  kv_memory.py  kv_quality.py  plot_kv_memory.py  prepare_sharegpt.py  quality_proxy.py  sharegpt_50.json  throughput.py  throughput_results.json
mlx_turboquant/: __init__.py  attention.py  cli.py  codebook.py  convert.py  kv_cache.py  loader.py  patch.py  qjl.py  quant_linear.py  rotation.py
mlx_turboquant.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
mlx_turboquant/kernels/: __init__.py  qjl_dot.py  qmm.py
tests/: test_codebook.py  test_kernels.py  test_kv_cache.py  test_qjl.py  test_quant_linear.py  test_rotation.py  test_serve.py
